Update extension name to 'Show a Random Trello Card'

--- a/newtab.html
+++ b/newtab.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Random Trello Card</title>
+    <title>Show a Random Trello Card</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
