Add theme selector with gradient options

--- a/newtab.html
+++ b/newtab.html
@@ -34,6 +34,23 @@
             <label for="boardId">Board ID:</label>
             <input type="text" id="boardId" placeholder="Enter your Trello board ID">
         </div>
+        <div class="form-group">
+            <label>Theme:</label>
+            <div class="theme-options">
+                <div class="theme-option" data-theme="purple-blue" title="Purple Blue">
+                    <div class="theme-preview purple-blue"></div>
+                </div>
+                <div class="theme-option" data-theme="sunset" title="Sunset">
+                    <div class="theme-preview sunset"></div>
+                </div>
+                <div class="theme-option" data-theme="ocean" title="Ocean">
+                    <div class="theme-preview ocean"></div>
+                </div>
+                <div class="theme-option" data-theme="forest" title="Forest">
+                    <div class="theme-preview forest"></div>
+                </div>
+            </div>
+        </div>
         <button id="saveSettings">Save Settings</button>
     </div>
     <script src="script.js"></script>
