Add helpful field descriptions to settings form

--- a/newtab.html
+++ b/newtab.html
@@ -25,14 +25,20 @@
         <div class="form-group">
             <label for="apiKey">Trello API Key:</label>
             <input type="text" id="apiKey" placeholder="Enter your Trello API key">
+            <p class="field-help">Get your API key from <a href="https://trello.com/app-key" target="_blank">Trello's
+                    API Key page</a>. Need a walkthrough? <a href="https://youtu.be/RDg3TYFDuzg" target="_blank">Watch
+                    the video</a>.</p>
         </div>
         <div class="form-group">
             <label for="token">Trello Token:</label>
             <input type="text" id="token" placeholder="Enter your Trello token">
+            <p class="field-help">Click "Generate a Token" on the API Key page to get your token</p>
         </div>
         <div class="form-group">
             <label for="boardId">Board ID:</label>
             <input type="text" id="boardId" placeholder="Enter your Trello board ID">
+            <p class="field-help">Found by going to your board, typing `.json` at the end of the url, then copying the
+                value in quotes after "id". </p>
         </div>
         <div class="form-group">
             <label>Theme:</label>
