Update help text with video walkthrough links

--- a/newtab.html
+++ b/newtab.html
@@ -25,9 +25,10 @@
         <div class="form-group">
             <label for="apiKey">Trello API Key:</label>
             <input type="text" id="apiKey" placeholder="Enter your Trello API key">
-            <p class="field-help">Get your API key from <a href="https://trello.com/app-key" target="_blank">Trello's
-                    API Key page</a>. Need a walkthrough? <a href="https://youtu.be/RDg3TYFDuzg" target="_blank">Watch
-                    the video</a>.</p>
+            <p class="field-help">Get your API key from <a href="https://trello.com/power-ups/admin/new"
+                    target="_blank">Trello's
+                    Power-Up Admin page</a>. <a href="https://youtu.be/RDg3TYFDuzg" target="_blank">Watch
+                    a walkthrough</a>.</p>
         </div>
         <div class="form-group">
             <label for="token">Trello Token:</label>
@@ -38,7 +39,8 @@
             <label for="boardId">Board ID:</label>
             <input type="text" id="boardId" placeholder="Enter your Trello board ID">
             <p class="field-help">Found by going to your board, typing `.json` at the end of the url, then copying the
-                value in quotes after "id". </p>
+                value in quotes after "id". <a href="https://youtu.be/wYrfvFhnkXM" target="_blank">Watch a
+                    walkthrough</a>.</p>
         </div>
         <div class="form-group">
             <label>Theme:</label>
