Align save button and feedback link in settings footer

--- a/newtab.html
+++ b/newtab.html
@@ -59,8 +59,9 @@
                 </div>
             </div>
         </div>
-        <button id="saveSettings">Save Settings</button>
-        <div class="feedback-link">
+        <div class="settings-footer">
+            <button id="saveSettings">Save Settings</button>
+            <div class="feedback-link">
             <a href="https://forms.fillout.com/t/25EfUgVc5pus" target="_blank">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
@@ -70,6 +71,7 @@
                 </svg>
                 Questions or feedback?
             </a>
+        </div>
         </div>
     </div>
     <script src="script.js"></script>
