Add close button to settings panel

--- a/newtab.html
+++ b/newtab.html
@@ -21,6 +21,12 @@
         </div>
     </div>
     <div id="settings" class="settings hidden">
+        <button id="closeSettings" class="close-button" aria-label="Close settings">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="18" y1="6" x2="6" y2="18"></line>
+                <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+        </button>
         <h2>Settings</h2>
         <div class="form-group">
             <label for="apiKey">Trello API Key:</label>
