--- a/newtab.html
+++ b/newtab.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <div id="overlay" class="overlay hidden"></div>
     <div class="container">
         <div class="card">
             <div class="settings-button" id="settingsButton">
