--- a/newtab.html
+++ b/newtab.html
@@ -29,6 +29,21 @@
             </svg>
         </button>
         <h2>Settings</h2>
+        <div class="auth-section">
+            <button id="authButton" class="auth-button">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4" />
+                    <polyline points="10 17 15 12 10 7" />
+                    <line x1="15" y1="12" x2="3" y2="12" />
+                </svg>
+                Authenticate with Trello
+            </button>
+            <div id="boardSelector" class="board-selector hidden">
+                <label for="boardSelect">Select a Board:</label>
+                <select id="boardSelect" class="board-select"></select>
+            </div>
+        </div>
         <div class="form-group">
             <label for="apiKey">Trello API Key:</label>
             <input type="text" id="apiKey" placeholder="Enter your Trello API key">
