--- a/newtab.html
+++ b/newtab.html
@@ -30,6 +30,14 @@
         </button>
         <h2>Settings</h2>
         <div class="auth-section">
+            <div id="authStatus" class="auth-status hidden">
+                <svg class="check-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
+                    <polyline points="22 4 12 14.01 9 11.01" />
+                </svg>
+                <span>You're authorized!</span>
+            </div>
             <button id="authButton" class="auth-button">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
